Bug fix: vertical scrollbar get placed to the left when no content Fixed: https://github.com/mdbootstrap/perfect-scrollbar/issues/792

--- a/src/jquery-scroll-container.scss
+++ b/src/jquery-scroll-container.scss
@@ -40,6 +40,9 @@ $scrollbar-z-index: 100;
 
     .ps__rail-y {
         width: $scroll-size !important;
+
+        //Bug fix https://github.com/mdbootstrap/perfect-scrollbar/issues/792
+        left: auto !important;
     }
 
     .ps__rail {
